--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Rekisteröinti</title>
+  <meta charset="utf-8" />
 </head>
-
 <body>
+
+  {% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+      <ul style="list-style:none; padding-left:0;">
+        {% for category, msg in messages %}
+          <li style="margin:4px 0; color:{% if category=='error' %}#b00000{% elif category=='success' %}#0a6000{% else %}#222{% endif %};">
+            {{ msg }}
+          </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
   <form action="/create" method="post">
     <h1>Luo uusi tunnus</h1>
     <p>
@@ -22,6 +34,8 @@
     </p>
     <input type="submit" value="Luo tunnus" />
   </form>
-</body>
 
+  <p>Onko sinulla jo tunnus? <a href="{{ url_for('user_bp.login') }}">Kirjaudu sisään</a></p>
+
+</body>
 </html>
