--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -26,6 +26,17 @@
       Sallitut genret: {{ allowed_genres | join(', ') }}
     </p>
     <p>
+      Ikäraja: <br />
+      <select name="age_rating" required>
+        <option value="">-- valitse ikäraja --</option>
+        <option value="U" {% if item.age_rating == 'U' %}selected{% endif %}>U – Sallittu kaikenikäisille</option>
+        <option value="PG" {% if item.age_rating == 'PG' %}selected{% endif %}>PG – Vanhempien harkinta suositeltavaa</option>
+        <option value="12" {% if item.age_rating == '12' %}selected{% endif %}>12 – Kielletty alle 12-vuotiailta</option>
+        <option value="15" {% if item.age_rating == '15' %}selected{% endif %}>15 – Kielletty alle 15-vuotiailta</option>
+        <option value="18" {% if item.age_rating == '18' %}selected{% endif %}>18 – Kielletty alle 18-vuotiailta</option>
+      </select>
+    </p>
+    <p>
       Vuosi: <br />
       <input type="number" name="year" min="1888" max="2100" value="{{ item.year or '' }}" />
     </p>
