--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -26,6 +26,17 @@
       Sallitut genret: {{ allowed_genres | join(', ') }}
     </p>
     <p>
+      Ikäraja: <br />
+      <select name="age_rating" required>
+        <option value="" disabled selected>-- valitse ikäraja --</option>
+        <option value="U">U – Sallittu kaikenikäisille</option>
+        <option value="PG">PG – Vanhempien harkinta suositeltavaa</option>
+        <option value="12">12 – Kielletty alle 12-vuotiailta</option>
+        <option value="15">15 – Kielletty alle 15-vuotiailta</option>
+        <option value="18">18 – Kielletty alle 18-vuotiailta</option>
+      </select>
+    </p>
+    <p>
       Vuosi: <br />
       <input type="number" name="year" min="1888" max="2100" />
     </p>
