Update search to use age ratings and drop description matching

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   </p>
 
   <form action="/" method="get" style="margin: 1em 0;">
-    <input type="text" name="q" placeholder="Hae nimellä, tyylilajilla, kuvauksella tai vuodella" value="{{ q or '' }}" style="width: 420px;" />
+    <input type="text" name="q" placeholder="Hae nimellä, tyylilajilla, ikärajalla tai vuodella" value="{{ q or '' }}" style="width: 420px;" />
     <input type="submit" value="Hae" />
   </form>
 
