--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -23,6 +23,14 @@
       </select>
     </p>
     <p>
+      Tunnisteet (tunnelma): <br />
+      {% for t in tags %}
+        <label style="display:block;">
+          <input type="checkbox" name="tags" value="{{ t.id }}" {% if t.id in selected_tag_ids %}checked{% endif %} /> {{ t.name_fi }}
+        </label>
+      {% endfor %}
+    </p>
+    <p>
       Ikäraja: <br />
       <select name="age_rating" required>
         <option value="">-- valitse ikäraja --</option>
