Make year field mandatory on item creation and update

--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -43,7 +43,7 @@
     </p>
     <p>
       Vuosi: <br />
-      <input type="number" name="year" min="1888" max="2100" value="{{ item.year or '' }}" />
+      <input type="number" name="year" min="1888" max="2100" value="{{ item.year or '' }}" required />
     </p>
     <p>
       Kuvaus: <br />
