--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -43,7 +43,7 @@
     </p>
     <p>
       Vuosi: <br />
-      <input type="number" name="year" min="1888" max="2100" />
+      <input type="number" name="year" min="1888" max="2100" required />
     </p>
     <p>
       Kuvaus: <br />
