--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -11,7 +11,7 @@
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <p>
       Nimi: <br />
-      <input type="text" name="title" required />
+      <input type="text" name="title" required maxlength="75" />
     </p>
     <p>
       Tyylilaji (genre): <br />
@@ -43,7 +43,7 @@
     </p>
     <p>
       Vuosi: <br />
-      <input type="number" name="year" min="1888" max="2100" required />
+      <input type="number" name="year" min="1888" max="{{ current_year }}" required />
     </p>
     <p>
       Kuvaus: <br />
