Limit description and comment fields to 250 characters
- Backend: Validate description length in items_create/items_update and comment length in reviews_create.
- Templates: Add maxlength=250 to description textareas (new/edit item) and comment textarea (item detail).

--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -47,7 +47,7 @@
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="4" cols="40">{{ item.description or '' }}</textarea>
+      <textarea name="description" rows="4" cols="40" maxlength="250">{{ item.description or '' }}</textarea>
     </p>
     <input type="submit" value="Päivitä" />
     <a href="/">Peruuta</a>
