--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -76,7 +76,7 @@
       </p>
       <p>
         Kommentti: <br />
-        <textarea name="comment" rows="4" cols="50"></textarea>
+        <textarea name="comment" rows="4" cols="50" maxlength="250"></textarea>
       </p>
       <input type="submit" value="Lähetä arvostelu" />
     </form>
