--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -47,7 +47,7 @@
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="4" cols="40"></textarea>
+      <textarea name="description" rows="4" cols="40" maxlength="250"></textarea>
     </p>
     <input type="submit" value="Tallenna" />
     <a href="/">Peruuta</a>
