Add character limit hints to input fields
- Display 'Enintään 75 merkkiä' below title inputs.
- Display 'Enintään 250 merkkiä' below description and comment textareas.
- Improves usability by clearly showing field constraints.

--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -76,7 +76,8 @@
       </p>
       <p>
         Kommentti: <br />
-        <textarea name="comment" rows="4" cols="50" maxlength="250"></textarea>
+        <textarea name="comment" rows="4" cols="50" maxlength="250"></textarea><br />
+        <small style="color: #666;">Enintään 250 merkkiä</small>
       </p>
       <input type="submit" value="Lähetä arvostelu" />
     </form>
