--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -12,6 +12,7 @@
     <p>
       Nimi: <br />
       <input type="text" name="title" value="{{ item.title }}" required maxlength="75" />
+      <small style="color: #666;">Enintään 75 merkkiä</small>
     </p>
     <p>
       Tyylilaji (genre): <br />
@@ -47,7 +48,8 @@
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="4" cols="40" maxlength="250">{{ item.description or '' }}</textarea>
+      <textarea name="description" rows="4" cols="40" maxlength="250">{{ item.description or '' }}</textarea><br />
+      <small style="color: #666;">Enintään 250 merkkiä</small>
     </p>
     <input type="submit" value="Päivitä" />
     <a href="/">Peruuta</a>
