--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -35,7 +35,7 @@
 </p>
 
 {% if item.description %}
-  <p><em class="multiline">{{ item.description }}</em></p>
+  <p><em class="multiline">{{ item.description | show_lines }}</em></p>
 {% endif %}
 
 <hr />
@@ -53,7 +53,7 @@
   {% for r in reviews %}
     <li style="margin-bottom: 0.6em;">
       <strong><a href="{{ url_for('user_bp.profile', username=r.username) }}">{{ r.username }}</a></strong> antoi {{ r.rating }} / 5
-      <div class="multiline">{{ r.comment or '' }}</div>
+      <div class="multiline">{{ (r.comment or '') | show_lines }}</div>
       <span class="muted">{{ r.created_at }}</span>
     </li>
   {% endfor %}
