--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -3,6 +3,7 @@
 <head>
   <title>Lisää elokuva</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body>
   <h1>Lisää elokuva</h1>
