--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,7 @@
 <head>
   <title>Rekisteröinti</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body>
 
