--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -10,6 +10,9 @@
   </style>
 </head>
 <body>
+  <a href="{{ url_for('reviews_bp.index') }}" style="position: fixed; top: 20px; left: 20px; width: 50px; height: 50px; z-index: 100;">
+    <img src="{{ url_for('static', filename='home-icon.svg') }}" alt="Home" style="width: 100%; height: 100%;" />
+  </a>
 
 {% with messages = get_flashed_messages(with_categories=True) %}
   {% if messages %}
