--- a/static/style.css
+++ b/static/style.css
@@ -205,6 +205,10 @@ section {
     border-radius: 4px;
 }
 
+.section-title {
+    text-align: center;
+}
+
 section h2 {
     margin-top: 0;
 }
@@ -249,4 +253,90 @@ body > p:first-of-type {
 
 body > p {
     text-align: center;
+}
+
+.home-link {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 50px;
+    height: 50px;
+    z-index: 100;
+}
+
+.home-icon {
+    width: 100%;
+    height: 100%;
+}
+
+.flash-messages {
+    list-style: none;
+    padding-left: 0;
+    margin: 0 0 12px;
+}
+
+.flash-message {
+    margin: 4px 0;
+    color: #222;
+}
+
+.flash-error {
+    color: #b00000;
+}
+
+.flash-success {
+    color: #0a6000;
+}
+
+.about-section {
+    background-color: #f5f5f5;
+    padding: 1em;
+    margin: 1em 0;
+    border-radius: 4px;
+}
+
+.search-form {
+    margin: 1em 0;
+}
+
+.search-input {
+    width: 520px;
+}
+
+.movie-list-item {
+    margin-bottom: 0.8em;
+}
+
+.movie-tags {
+    font-size: 0.95em;
+}
+
+.inline-form {
+    display: inline;
+}
+
+.multiline {
+    white-space: pre-line;
+}
+
+.muted {
+    color: #555;
+    font-size: 0.95em;
+}
+
+.review-list-item {
+    margin-bottom: 0.6em;
+}
+
+.review-comment {
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
+}
+
+.hint-text {
+    color: #666;
+}
+
+.tag-checkbox {
+    display: block;
 }
