--- a/static/style.css
+++ b/static/style.css
@@ -340,3 +340,12 @@ body > p {
 .tag-checkbox {
     display: block;
 }
+
+.nav-links {
+    text-align: center;
+    margin-top: 0.5em;
+}
+
+.nav-links a {
+    margin: 0 0.25em;
+}
