--- a/templates/about.html
+++ b/templates/about.html
@@ -12,6 +12,19 @@
 
   <h1>Leffasuositukset</h1>
 
+  <p class="nav-links">
+    <a href="{{ url_for('reviews_bp.index') }}">Etusivu</a>
+    | <a href="{{ url_for('reviews_bp.about') }}">Tietoa sovelluksesta</a>
+    {% if not session.username %}
+      | <a href="{{ url_for('user_bp.register') }}">Rekisteröidy</a>
+      | <a href="{{ url_for('user_bp.login') }}">Kirjaudu</a>
+    {% else %}
+      | <a href="{{ url_for('user_bp.profile', username=session.username) }}">Profiili</a>
+      | <a href="/logout">Kirjaudu ulos</a>
+      | <a href="/new_item">Lisää uusi elokuva</a>
+    {% endif %}
+  </p>
+
   <section class="about-section">
     <h2>Sovelluksesta</h2>
     <p>
@@ -27,16 +40,5 @@
     </ul>
   </section>
 
-  <p class="nav-links">
-    <a href="{{ url_for('reviews_bp.index') }}">Etusivu</a>
-    {% if not session.username %}
-      | <a href="{{ url_for('user_bp.register') }}">Rekisteröidy</a>
-      | <a href="{{ url_for('user_bp.login') }}">Kirjaudu</a>
-    {% else %}
-      | <a href="{{ url_for('user_bp.profile', username=session.username) }}">Profiili</a>
-      | <a href="/logout">Kirjaudu ulos</a>
-      | <a href="/new_item">Lisää uusi elokuva</a>
-    {% endif %}
-  </p>
 </body>
 </html>
