style: make 'Ei vielä tunnusta?' bold with class

--- a/templates/login.html
+++ b/templates/login.html
@@ -51,7 +51,7 @@
       </p>
       <input type="submit" value="Kirjaudu" />
     </form>
-    <p>Ei vielä tunnusta? <a href="{{ url_for('user_bp.register') }}">Rekisteröidy</a></p>
+    <p class="login-register-hint">Ei vielä tunnusta? <a href="{{ url_for('user_bp.register') }}">Rekisteröidy</a></p>
   {% endif %}
 
 </body>
