--- a/static/style.css
+++ b/static/style.css
@@ -346,6 +346,10 @@ body > p {
     margin-top: 0.5em;
 }
 
+.login-register-hint {
+    font-weight: bold;
+}
+
 .nav-links a {
     margin: 0 0.25em;
     font-weight: bold;
