--- a/static/style.css
+++ b/static/style.css
@@ -350,6 +350,10 @@ body > p {
     font-weight: bold;
 }
 
+.register-login-hint {
+    font-weight: bold;
+}
+
 .nav-links a {
     margin: 0 0.25em;
     font-weight: bold;
