--- a/templates/register.html
+++ b/templates/register.html
@@ -6,21 +6,37 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body>
-  <a href="{{ url_for('reviews_bp.index') }}" style="position: fixed; top: 20px; left: 20px; width: 50px; height: 50px; z-index: 100;">
-    <img src="{{ url_for('static', filename='home-icon.svg') }}" alt="Home" style="width: 100%; height: 100%;" />
+  <a href="{{ url_for('reviews_bp.index') }}" class="home-link">
+    <img src="{{ url_for('static', filename='home-icon.svg') }}" alt="Home" class="home-icon" />
   </a>
 
   {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
-      <ul style="list-style:none; padding-left:0;">
+      <ul class="flash-messages">
         {% for category, msg in messages %}
-          <li style="margin:4px 0; color:{% if category=='error' %}#b00000{% elif category=='success' %}#0a6000{% else %}#222{% endif %};">
+          <li class="flash-message flash-{{ category }}">
             {{ msg }}
           </li>
         {% endfor %}
       </ul>
     {% endif %}
   {% endwith %}
+
+  {% if session.username %}
+    <p>Olet kirjautunut nimellä {{ session.username }}</p>
+  {% endif %}
+
+  <p class="nav-links">
+    <a href="{{ url_for('reviews_bp.index') }}">Etusivu</a>
+    | <a href="{{ url_for('reviews_bp.about') }}">Tietoa sovelluksesta</a>
+    {% if not session.username %}
+      | <a href="{{ url_for('user_bp.login') }}">Kirjaudu</a>
+    {% else %}
+      | <a href="{{ url_for('user_bp.profile', username=session.username) }}">Profiili</a>
+      | <a href="/logout">Kirjaudu ulos</a>
+      | <a href="/new_item">Lisää uusi elokuva</a>
+    {% endif %}
+  </p>
 
   <form action="/create" method="post">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
@@ -40,7 +56,7 @@
     <input type="submit" value="Luo tunnus" />
   </form>
 
-  <p>Onko sinulla jo tunnus? <a href="{{ url_for('user_bp.login') }}">Kirjaudu sisään</a></p>
+  <p class="register-login-hint">Onko sinulla jo tunnus? <a href="{{ url_for('user_bp.login') }}">Kirjaudu sisään</a></p>
 
 </body>
 </html>
